--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
-    "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
